crates/rome_cli/tests/snapshots/main_commands_check/fs_error_unknown.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
no files were processed in the specified paths.
```

# Emitted Messages

```block
prefix/ci.js internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Unknown file type
  
  i Rome encountered a file system entry that's neither a file, directory or symbolic link
  

```


