crates/rome_cli/tests/snapshots/main_commands_check/fs_files_ignore_symlink.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 346
expression: content
---
# Emitted Messages

```block
Skipped 4 suggested fixes.
If you wish to apply the suggested (unsafe) fixes, use the command rome check --apply-unsafe

```

```block
Fixed 2 file(s) in <TIME>
```


