crates/rome_cli/tests/snapshots/main_commands_check/lint_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
for(;true;);

```

# Termination Message

```block
2 errors were emitted while running checks
```

# Emitted Messages

```block
check.js:1:1 lint/correctness/useWhile  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Use while loops instead of for loops.
  
  > 1 │ for(;true;);
      │ ^^^^^^^^^^^
    2 │ 
  
  i Suggested fix: Use a while loop
  
    1   │ - for(;true;);
      1 │ + while·(true);
    2 2 │   
  

```

```block
check.js:1:1 lint/style/useBlockStatements  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Block statements are preferred in this position.
  
  > 1 │ for(;true;);
      │ ^^^^^^^^^^^^
    2 │ 
  
  i Suggested fix: Wrap the statement with a `JsBlockStatement`
  
    1   │ - for(;true;);
      1 │ + for(;true;)·{}
    2 2 │   
  

```


