crates/rome_cli/tests/snapshots/main_commands_check/no_lint_if_linter_is_disabled_when_run_apply.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "enabled": false
  }
}
```

## `fix.js`

```js

if(a != -0) {}

```

# Termination Message

```block
no files were processed in the specified paths.
```

# Emitted Messages

```block
Fixed 0 file(s) in <TIME>
```


