crates/rome_cli/tests/snapshots/main_commands_check/no_lint_when_file_is_ignored.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "enabled": true,
    "ignore": ["test.js"]
  }
}
```

## `test.js`

```js

(1 >= -0)

```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
Fixed 0 file(s) in <TIME>
```


